# AIVault

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  Makefile  README.md  environment-gpu.yml  environment-macos.yml  environment.yml  pyproject.toml  setup.py  test_improved_agent.py
aivault/: __init__.py
aivault/computer_vision/: __init__.py  image_classification.py  image_processing.py  object_detection.py  segmentation.py
aivault/deep_learning/: __init__.py  architectures.py  neural_networks.py  optimization.py
aivault/deployment/: __init__.py  api_servers.py  containerization.py  edge_deployment.py
aivault/generative_ai/: __init__.py
aivault/generative_ai/image_generation/: __init__.py
aivault/generative_ai/large_language_models/: README.md  __init__.py  ai_agents.py
aivault/generative_ai/multimodal/: __init__.py
aivault/generative_ai/text_to_speech/: __init__.py
aivault/machine_learning/: __init__.py  reinforcement_learning.py  supervised_learning.py  unsupervised_learning.py
aivault/model_optimization/: __init__.py  distillation.py  pruning.py  quantization.py
aivault/nlp/: __init__.py  named_entity_recognition.py  sentiment_analysis.py  text_classification.py  text_generation.py
aivault/utilities/: __init__.py  common_utils.py  data_utils.py  eval_utils.py  viz_utils.py
examples/: README.md  ai_agents_showcase.ipynb  getting_started.ipynb
tests/: __init__.py  test_ai_agents.py  test_utilities.py
